Fix layout. Improve contrast. Bump version to 0.12.1

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -4,9 +4,10 @@
 $column-gap: 1rem;
 $family-sans-serif: 'Muli', sans-serif;
 $red: #d84315;
+$white-paper: hsl(0, 0%, 97%);
 $link: $red;
 
-$card-background-color: $white-bis;
+$card-background-color: $white-paper;
 $card-shadow: none;
 
 $footer-background-color: $white;
@@ -32,13 +33,8 @@ $navbar-height: 3rem;
   box-shadow: 0 4px 8px rgba($grey-darker, 0.1);
 }
 
-.level > .level-item:not(.is-narrow),
-.level.is-mobile > .level-item:not(.is-narrow) {
-  flex-grow: 0;
-}
-
 .reading-mode {
-  background-color: $white-bis;
+  background-color: $white-paper;
 }
 
 .section:not(:first-child) {
@@ -49,7 +45,7 @@ $navbar-height: 3rem;
 }
 
 .sidebar {
-  background-color: $white-bis;
+  background-color: $white-paper;
 }
 
 .share-button {
